--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.14.1",
+    "@prisma/client": "^5.16.2",
+    "@prisma/extension-accelerate": "^1.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
@@ -49,6 +50,6 @@
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.195",
     "prettier": "^2.8.8",
-    "prisma": "^4.14.1"
+    "prisma": "^5.16.2"
   }
 }
